--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,7 @@ a {
 * {
   box-sizing: border-box;
 }
+
 .input-text {
   @apply mt-1 block w-60 px-3 py-2 bg-white border border-slate-300 rounded-full text-sm shadow-sm placeholder-slate-300;
   @apply focus:outline-none focus:border-sky-500 focus:ring-1 focus:ring-sky-500;
@@ -35,5 +36,11 @@ a {
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+@media (max-width: 768px) {
+  section.hero {
+    background: none !important;
   }
 }
